parse.output
Terminals which are not used

   ERROR_TOKEN


State 42 conflicts: 1 shift/reduce


Grammar

    0 $accept: progam $end

    1 progam: statement_list

    2 statement_list: statement_list statement
    3               | /* empty */

    4 statement: END_STMT
    5          | expression END_STMT
    6          | PRINT expression END_STMT
    7          | INPUT expression END_STMT
    8          | if_statement
    9          | compound_statement
   10          | error END_STMT

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR statement optional_else_statement

   12 optional_else_statement: ELSE statement
   13                        | /* empty */

   14 compound_statement: BEGIN_CS statement_list END_CS

   15 expression: equal_expression
   16           | OPEN_PAR expression CLOSE_PAR

   17 equal_expression: expression EQUAL assign_expression
   18                 | concat_expression

   19 assign_expression: identifier ASSIGN assign_expression
   20                  | concat_expression

   21 concat_expression: concat_expression CONCAT simple_expression
   22                  | simple_expression

   23 simple_expression: identifier
   24                  | string

   25 identifier: ID

   26 string: STRING


Terminals, with rules where they appear

$end (0) 0
error (256) 10
ERROR_TOKEN (258)
IF (259) 11
ELSE (260) 12
PRINT (261) 6
INPUT (262) 7
ASSIGN (263) 19
EQUAL (264) 17
CONCAT (265) 21
END_STMT (266) 4 5 6 7 10
OPEN_PAR (267) 11 16
CLOSE_PAR (268) 11 16
BEGIN_CS (269) 14
END_CS (270) 14
ID (271) 25
STRING (272) 26


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
progam (19)
    on left: 1, on right: 0
statement_list (20)
    on left: 2 3, on right: 1 2 14
statement (21)
    on left: 4 5 6 7 8 9 10, on right: 2 11 12
if_statement (22)
    on left: 11, on right: 8
optional_else_statement (23)
    on left: 12 13, on right: 11
compound_statement (24)
    on left: 14, on right: 9
expression (25)
    on left: 15 16, on right: 5 6 7 11 16 17
equal_expression (26)
    on left: 17 18, on right: 15
assign_expression (27)
    on left: 19 20, on right: 17 19
concat_expression (28)
    on left: 21 22, on right: 18 20 21
simple_expression (29)
    on left: 23 24, on right: 21 22
identifier (30)
    on left: 25, on right: 19 23
string (31)
    on left: 26, on right: 24


state 0

    0 $accept: . progam $end

    $default  reduce using rule 3 (statement_list)

    progam          go to state 1
    statement_list  go to state 2


state 1

    0 $accept: progam . $end

    $end  shift, and go to state 3


state 2

    1 progam: statement_list .
    2 statement_list: statement_list . statement

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    $end  reduce using rule 1 (progam)

    statement           go to state 13
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    concat_expression   go to state 18
    simple_expression   go to state 19
    identifier          go to state 20
    string              go to state 21


state 3

    0 $accept: progam $end .

    $default  accept


state 4

   10 statement: error . END_STMT

    END_STMT  shift, and go to state 22


state 5

   11 if_statement: IF . OPEN_PAR expression CLOSE_PAR statement optional_else_statement

    OPEN_PAR  shift, and go to state 23


state 6

    6 statement: PRINT . expression END_STMT

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 24
    equal_expression   go to state 17
    concat_expression  go to state 18
    simple_expression  go to state 19
    identifier         go to state 20
    string             go to state 21


state 7

    7 statement: INPUT . expression END_STMT

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 25
    equal_expression   go to state 17
    concat_expression  go to state 18
    simple_expression  go to state 19
    identifier         go to state 20
    string             go to state 21


state 8

    4 statement: END_STMT .

    $default  reduce using rule 4 (statement)


state 9

   16 expression: OPEN_PAR . expression CLOSE_PAR

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 26
    equal_expression   go to state 17
    concat_expression  go to state 18
    simple_expression  go to state 19
    identifier         go to state 20
    string             go to state 21


state 10

   14 compound_statement: BEGIN_CS . statement_list END_CS

    $default  reduce using rule 3 (statement_list)

    statement_list  go to state 27


state 11

   25 identifier: ID .

    $default  reduce using rule 25 (identifier)


state 12

   26 string: STRING .

    $default  reduce using rule 26 (string)


state 13

    2 statement_list: statement_list statement .

    $default  reduce using rule 2 (statement_list)


state 14

    8 statement: if_statement .

    $default  reduce using rule 8 (statement)


state 15

    9 statement: compound_statement .

    $default  reduce using rule 9 (statement)


state 16

    5 statement: expression . END_STMT
   17 equal_expression: expression . EQUAL assign_expression

    EQUAL     shift, and go to state 28
    END_STMT  shift, and go to state 29


state 17

   15 expression: equal_expression .

    $default  reduce using rule 15 (expression)


state 18

   18 equal_expression: concat_expression .
   21 concat_expression: concat_expression . CONCAT simple_expression

    CONCAT  shift, and go to state 30

    $default  reduce using rule 18 (equal_expression)


state 19

   22 concat_expression: simple_expression .

    $default  reduce using rule 22 (concat_expression)


state 20

   23 simple_expression: identifier .

    $default  reduce using rule 23 (simple_expression)


state 21

   24 simple_expression: string .

    $default  reduce using rule 24 (simple_expression)


state 22

   10 statement: error END_STMT .

    $default  reduce using rule 10 (statement)


state 23

   11 if_statement: IF OPEN_PAR . expression CLOSE_PAR statement optional_else_statement

    OPEN_PAR  shift, and go to state 9
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    expression         go to state 31
    equal_expression   go to state 17
    concat_expression  go to state 18
    simple_expression  go to state 19
    identifier         go to state 20
    string             go to state 21


state 24

    6 statement: PRINT expression . END_STMT
   17 equal_expression: expression . EQUAL assign_expression

    EQUAL     shift, and go to state 28
    END_STMT  shift, and go to state 32


state 25

    7 statement: INPUT expression . END_STMT
   17 equal_expression: expression . EQUAL assign_expression

    EQUAL     shift, and go to state 28
    END_STMT  shift, and go to state 33


state 26

   16 expression: OPEN_PAR expression . CLOSE_PAR
   17 equal_expression: expression . EQUAL assign_expression

    EQUAL      shift, and go to state 28
    CLOSE_PAR  shift, and go to state 34


state 27

    2 statement_list: statement_list . statement
   14 compound_statement: BEGIN_CS statement_list . END_CS

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    END_CS    shift, and go to state 35
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    statement           go to state 13
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    concat_expression   go to state 18
    simple_expression   go to state 19
    identifier          go to state 20
    string              go to state 21


state 28

   17 equal_expression: expression EQUAL . assign_expression

    ID      shift, and go to state 11
    STRING  shift, and go to state 12

    assign_expression  go to state 36
    concat_expression  go to state 37
    simple_expression  go to state 19
    identifier         go to state 38
    string             go to state 21


state 29

    5 statement: expression END_STMT .

    $default  reduce using rule 5 (statement)


state 30

   21 concat_expression: concat_expression CONCAT . simple_expression

    ID      shift, and go to state 11
    STRING  shift, and go to state 12

    simple_expression  go to state 39
    identifier         go to state 20
    string             go to state 21


state 31

   11 if_statement: IF OPEN_PAR expression . CLOSE_PAR statement optional_else_statement
   17 equal_expression: expression . EQUAL assign_expression

    EQUAL      shift, and go to state 28
    CLOSE_PAR  shift, and go to state 40


state 32

    6 statement: PRINT expression END_STMT .

    $default  reduce using rule 6 (statement)


state 33

    7 statement: INPUT expression END_STMT .

    $default  reduce using rule 7 (statement)


state 34

   16 expression: OPEN_PAR expression CLOSE_PAR .

    $default  reduce using rule 16 (expression)


state 35

   14 compound_statement: BEGIN_CS statement_list END_CS .

    $default  reduce using rule 14 (compound_statement)


state 36

   17 equal_expression: expression EQUAL assign_expression .

    $default  reduce using rule 17 (equal_expression)


state 37

   20 assign_expression: concat_expression .
   21 concat_expression: concat_expression . CONCAT simple_expression

    CONCAT  shift, and go to state 30

    $default  reduce using rule 20 (assign_expression)


state 38

   19 assign_expression: identifier . ASSIGN assign_expression
   23 simple_expression: identifier .

    ASSIGN  shift, and go to state 41

    $default  reduce using rule 23 (simple_expression)


state 39

   21 concat_expression: concat_expression CONCAT simple_expression .

    $default  reduce using rule 21 (concat_expression)


state 40

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR . statement optional_else_statement

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    statement           go to state 42
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    concat_expression   go to state 18
    simple_expression   go to state 19
    identifier          go to state 20
    string              go to state 21


state 41

   19 assign_expression: identifier ASSIGN . assign_expression

    ID      shift, and go to state 11
    STRING  shift, and go to state 12

    assign_expression  go to state 43
    concat_expression  go to state 37
    simple_expression  go to state 19
    identifier         go to state 38
    string             go to state 21


state 42

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR statement . optional_else_statement

    ELSE  shift, and go to state 44

    ELSE      [reduce using rule 13 (optional_else_statement)]
    $default  reduce using rule 13 (optional_else_statement)

    optional_else_statement  go to state 45


state 43

   19 assign_expression: identifier ASSIGN assign_expression .

    $default  reduce using rule 19 (assign_expression)


state 44

   12 optional_else_statement: ELSE . statement

    error     shift, and go to state 4
    IF        shift, and go to state 5
    PRINT     shift, and go to state 6
    INPUT     shift, and go to state 7
    END_STMT  shift, and go to state 8
    OPEN_PAR  shift, and go to state 9
    BEGIN_CS  shift, and go to state 10
    ID        shift, and go to state 11
    STRING    shift, and go to state 12

    statement           go to state 46
    if_statement        go to state 14
    compound_statement  go to state 15
    expression          go to state 16
    equal_expression    go to state 17
    concat_expression   go to state 18
    simple_expression   go to state 19
    identifier          go to state 20
    string              go to state 21


state 45

   11 if_statement: IF OPEN_PAR expression CLOSE_PAR statement optional_else_statement .

    $default  reduce using rule 11 (if_statement)


state 46

   12 optional_else_statement: ELSE statement .

    $default  reduce using rule 12 (optional_else_statement)
